Add Groovy and Kotlin modules