@@ -1,9 +1,7 @@
 package problems1_100;
 
 import java.util.Arrays;
-import java.util.stream.Collectors;
 import org.junit.Test;
-import testing.Sample;
 import testing.SampledTest;
 
 import static com.google.common.truth.Truth.assertThat;
@@ -12,9 +10,9 @@ import static com.google.common.truth.Truth.assertWithMessage;
 public class RemoveDuplicatesFromSortedArrayTest extends SampledTest {
     @Test
     public void test() {
-        for (RemoveDuplicatesFromSortedArray solution
-            : RemoveDuplicatesFromSortedArray.values()) {
-            for (TypedSample sample : getSamples(TypedSample[].class)) {
+        for (RemoveDuplicatesFromSortedArray solution : RemoveDuplicatesFromSortedArray.values()) {
+            for (RemoveDuplicatesFromSortedArraySample sample
+                : getSamples(RemoveDuplicatesFromSortedArraySample[].class)) {
                 assertWithMessage(sample.getMessage())
                     .that(solution.removeDuplicates(sample.input.nums))
                     .isEqualTo(sample.output);
@@ -22,16 +20,10 @@ public class RemoveDuplicatesFromSortedArrayTest extends SampledTest {
                     Arrays
                         .stream(sample.input.nums)
                         .boxed()
-                        .collect(Collectors.toList())
+                        .toList()
                         .subList(0, sample.output)
                 ).containsNoDuplicates();
             }
-        }
-    }
-
-    static class TypedSample extends Sample<TypedSample.Input, Integer> {
-        static class Input {
-            int[] nums;
         }
     }
 }
