@@ -1,9 +1,7 @@
 package problems1_100;
 
 import java.util.Arrays;
-import java.util.stream.Collectors;
 import org.junit.Test;
-import testing.Sample;
 import testing.SampledTest;
 
 import static com.google.common.truth.Truth.assertThat;
@@ -13,7 +11,7 @@ public class RemoveElementTest extends SampledTest {
     @Test
     public void test() {
         for (RemoveElement solution : RemoveElement.values()) {
-            for (TypedSample sample : getSamples(TypedSample[].class)) {
+            for (RemoveElementSample sample : getSamples(RemoveElementSample[].class)) {
                 assertWithMessage(sample.getMessage())
                     .that(
                         solution.removeElement(
@@ -25,17 +23,10 @@ public class RemoveElementTest extends SampledTest {
                     Arrays
                         .stream(sample.input.nums)
                         .boxed()
-                        .collect(Collectors.toList())
+                        .toList()
                         .subList(0, sample.output)
                 ).doesNotContain(sample.input.val);
             }
-        }
-    }
-
-    static class TypedSample extends Sample<TypedSample.Input, Integer> {
-        static class Input {
-            int[] nums;
-            int val;
         }
     }
 }
