@@ -1,9 +1,7 @@
 package problems1_100;
 
 import java.util.Arrays;
-import java.util.stream.Collectors;
 import org.junit.Test;
-import testing.Sample;
 import testing.SampledTest;
 
 import static com.google.common.truth.Truth.assertWithMessage;
@@ -12,7 +10,7 @@ public class TwoSumTest extends SampledTest {
     @Test
     public void test() {
         for (TwoSum solution : TwoSum.values()) {
-            for (TypedSample sample : getSamples(TypedSample[].class)) {
+            for (TwoSumSample sample : getSamples(TwoSumSample[].class)) {
                 assertWithMessage(sample.getMessage())
                     .that(
                         solution.twoSum(
@@ -24,16 +22,9 @@ public class TwoSumTest extends SampledTest {
                         Arrays
                             .stream(sample.output)
                             .boxed()
-                            .collect(Collectors.toList())
+                            .toList()
                     );
             }
-        }
-    }
-
-    static class TypedSample extends Sample<TypedSample.Input, int[]> {
-        static class Input {
-            int[] nums;
-            int target;
         }
     }
 }
